src/public/css/style.css
:root {
    --bg-color: #ffffff;
    --text-color: #333333;
    --accent-color: #7d2ae8;
    --primary-color: #4a90e2;
    --secondary-text-color: #3b3b3b;
    --border-color: #ddd;
    --input-bg: #f9f9f9;
    --box-shadow-color: rgba(0, 0, 0, 0.217);

    --text-sm: clamp(0.75rem, 0.8vw + 0.5rem, 0.875rem);
    --text-base: clamp(1rem, 1vw + 1rem, 1.125rem);
    --text-md: clamp(1.125rem, 1.2vw + 1rem, 1.375rem);
    --text-lg: clamp(1.375rem, 1.5vw + 1rem, 1.75rem);
    --text-xl: clamp(1.75rem, 2vw + 1rem, 2.25rem);
    --text-2xl: clamp(2.25rem, 3vw + 1rem, 3.25rem);
}

* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

body.dark-mode {
    --bg-color: #1a1a1a;
    --text-color: #f5f5f5;
    --accent-color: #bb86fc;
    --box-shadow-color: rgba(109, 103, 103, 0.49);
    --secondary-text-color: #aeafaf;
}

body {
    background-color: var(--bg-color);
    color: var(--text-color);
    transition: all 0.3s ease;
}

main {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    padding: 1rem;
    font-size: var(--text-base);
}

main a {
    color: var(--accent-color);
    text-decoration: none;
}
main a:hover {
    color: var(--text-color);
    text-decoration: underline;
}

.riddle-container {
    text-align: center;
}

.riddle-container > h1 {
    margin-bottom: 10px;
}

/* --- navBar Component BEGIN  ---*/

.navbar {
    max-width: 1300px;
    margin: 0 auto;
    display: flex;
    justify-content: space-between;
    align-items: center;
    flex-wrap: wrap;
    padding: 15px 30px;
    font-family:
        system-ui,
        -apple-system,
        BlinkMacSystemFont,
        'Segoe UI',
        Roboto,
        Oxygen,
        Ubuntu,
        Cantarell,
        'Open Sans',
        'Helvetica Neue',
        sans-serif;
}

.nav-logo a {
    color: var(--text-color);
    text-decoration: none;
    font-size: var(--text-lg);
    font-weight: bold;
}

.nav-links {
    list-style: none;
    display: flex;
    gap: 20px;
    align-items: center;
}
.nav-links a {
    color: var(--text-color);
    text-decoration: none;
    font-size: var(--text-md);
    transition: color 0.3s ease;
}
.nav-links a:hover {
    color: var(--accent-color);
}

/* dark and light theme switch button  */

#theme-btn {
    transition: 200ms ease-in-out;
    border: none;
    background-color: var(--bg-color);
    cursor: pointer;
}

#theme-btn:hover {
    transform: scale(1.2);
}
/* ---  navBar Component END  ---*/

/* --- Form Component BEGIN ---*/

.form-container {
    max-width: 500px;
    margin: 0 auto;
    padding: 30px;
    border-radius: 12px;
    box-shadow: 0 10px 25px var(--box-shadow-color);
    background-color: var(--bg-color);
}

.form-container > h1 {
    text-align: center;
    margin-bottom: 25px;
    color: var(--text-color);
    font-size: var(--text-2xl);
}

.form-group {
    margin-bottom: 20px;
}

label {
    display: block;
    font-weight: 600;
    font-size: var(--text-base);
}

input[type='text'],
input[type='password'],
textarea {
    width: 100%;
    padding: 6px 8px;
    border-radius: 8px;
    background-color: var(--input-bg);
    font-size: var(--text-base);
    outline: none;
}

input:focus,
select:focus,
textarea:focus {
    border-color: var(--primary-color);
    box-shadow: 0 0 0 3px var(--box-shadow-color);
    background-color: var(--bg-color);
}

.submit-btn,
.cancel-btn {
    display: block;
    width: 100%;
    padding: 14px;
    border: none;
    border-radius: 8px;
    font-size: var(--text-base);
    font-weight: bold;
    cursor: pointer;
    transition:
        background-color 0.3s ease,
        transform 0.2s ease-in-out;
    margin-bottom: 8px;
}
.form-actions > button:active {
    transform: scale(0.98);
}

.submit-btn {
    background-color: var(--primary-color);
    color: white;
}

.cancel-btn {
    background-color: rgb(228, 84, 84);
    text-decoration: none;
    color: white;
    text-align: center;
}

.submit-btn:hover,
.cancel-btn:hover {
    transform: scale(1.02);
    text-decoration: none;
    color: white;
}

/* --- Form Component END ---*/

/* --- Form Error Component BEGIN --- */
.error-list {
    color: rgb(243, 53, 53);
}

.error-list > li {
    margin-bottom: 8px;
}
/* --- Form Error Component END --- */

/* --- message-card Component BEGIN --- */
.message-card {
    margin: 1rem;
    background: var(--bg-color);
    border: 1px solid var(--border-color);
    border-radius: 12px;
    padding: 16px;
    max-width: 700px;
    transition: box-shadow 0.2s;
    flex: 1;
}

.message-card:hover {
    box-shadow: 0 4px 12px var(--box-shadow-color);
}

.message-header {
    display: flex;
    justify-content: space-between;
    align-items: center;
    margin-bottom: 10px;
}

.user-info {
    display: flex;
    align-items: center;
    gap: 6px;
    font-size: var(--text-base);
    overflow-wrap: break-word;
}

.full-name {
    font-weight: 700;
    color: var(--text-color);
}
.username,
.created-at {
    color: var(--secondary-text-color);
    font-size: var(--text-sm);
}
.dot {
    color: var(--secondary-text-color);
}

.message-body .title {
    margin: 0 0 8px 0;
    font-size: var(--text-md);
    color: var(--text-color);
    overflow-wrap: break-word;
}

.message-body .content {
    margin: 0;
    color: var(--text-color);
    line-height: 1.5;
    overflow-wrap: break-word;
    font-size: var(--text-base);
}

.delete-btn {
    background: none;
    border: none;
    color: #ff4d4f;
    cursor: pointer;
    padding: 8px;
    border-radius: 50%;
    transition: background 0.2s;
}

.delete-btn:hover {
    background: #fff1f0;
}

/* --- message-card Component END --- */

/* --- Error Page Component BEGIN --- */
.error-container {
    max-width: 700px;
}

.error-container h1 {
    font-size: var(--text-2xl);
    letter-spacing: 0.2rem;
    color: var(--secondary-text-color);
    text-align: center;
    margin: 1rem;
    font-weight: 800;
}

.error-container h2 {
    font-size: var(--text-xl);
    font-weight: 600;
    color: var(--text-color);
    margin: 0.5rem;
    line-height: 1.1;
}

.error-container p {
    font-size: var(--text-lg);
    line-height: 1.6;
    margin: 0.5rem;
    color: var(--secondary-text-color);
}

.error-container > a {
    font-size: var(--text-md);
    color: var(--accent-color);
    text-decoration: none;
    border-bottom: 1px solid var(--border-color);
    transition:
        color 0.2s ease,
        border-color 0.2s ease;
    margin: 0.5rem;
}

.error-container a:hover {
    color: var(--text-color);
    border-color: var(--border-color);
}
/* --- Error Page Component END ---  */

